# todolist-api

./: .coverage  .gitignore  .project  Dockerfile  LICENSE  compose.yaml  database.db  entrypoint.sh  pyproject.toml
migrations/: env.py
migrations/versions/: .project  26421b10b2c8_update_todo_table.py  3acb719eea8f_update.py  5339d1fa327b_create_users_table.py  7461e6c5808a_update_update_at_in_user_table.py  9c14446e679f_create_users_table.py  9e0af6a750fb_create_todos_table.py  d30d7a155329_update_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_database.py  test_security.py  test_todos.py  test_users.py
todolist_api/: app.py  database.py  models.py  schemas.py  security.py  settings.py
todolist_api/routers/: auth.py  todos.py  users.py
