[tool.poetry]
name = "todolist-api"
version = "0.1.0"
description = ""
authors = ["eriksgda <erik.ksgda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.3.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"


[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[toll.ruff.format]
preview = true
quote-style = "double"


[tool.taskipy.tasks]
run = "fastapi dev todolist_api/app.py"

pre_test = "task lint"
test = "pytest -s -x --cov=todolist_api -vv"
post_test = "coverage html"

lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix && ruff format ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
